--- a/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556.csproj
+++ b/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556.csproj
@@ -13,4 +13,16 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Cart\CurrentCart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Cart\CurrentCart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Cart\CurrentCart.cshtml" />
+  </ItemGroup>
+
 </Project>
